# test_dishka

./: README.md  main.py  pyproject.toml
Tasks/src/core/: ports.py
Tasks/src/core/applications/: worker.py
Tasks/src/infrastructure/task_manager/: __init__.py  main.py
Tasks/src/interface/FastAPI_/: main.py  routers.py
Tasks/src/main/: config.py  ioc.py  main.py
src/: app.py  ioc.py
src/core/: appication.py
src/core/ports/: helloworldport.py
src/infrastructure/ConfigurationModule/: main.py
src/infrastructure/HelloWorldModule/: main.py
src/infrastructure/New__HelloWorldModule/: main.py
src/main/: config.py  ioc.py  main.py
