[project]
name = "test-dishka"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Chistruga",email = "igor.chistruga@endava.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka (>=1.5.3,<2.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "structlog (>=25.2.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
